# AutoSlurm

./: .gitignore  README.md  pyproject.toml  slurm_submit.py
auto_slurm/: aslurm.py  aslurmx.py  auto_slurm.py  config.py  general_config.yaml  helpers.py  testing.py  tests.py
auto_slurm/configs/: bwuni_1gpu_a100_il.yaml  bwuni_1gpu_gpu4.yaml  bwuni_1gpu_gpu4_a100.yaml  bwuni_1gpu_gpu4_h100.yaml  bwuni_1gpu_gpu8.yaml  bwuni_1gpu_h100.yaml  bwuni_1gpu_h100_il.yaml  bwuni_4gpu_a100_il.yaml  bwuni_4gpu_gpu4.yaml  bwuni_4gpu_gpu4_a100.yaml  bwuni_4gpu_gpu4_h100.yaml  bwuni_4gpu_gpu8.yaml  bwuni_4gpu_h100.yaml  bwuni_4gpu_h100_il.yaml  bwuni_8gpu_gpu8.yaml  haicore_1gpu.yaml  haicore_4gpu.yaml  haicore_halfgpu.yaml  haicore_node.yaml  horeka_1gpu.yaml  horeka_1gpu_h100.yaml  horeka_4gpu.yaml  horeka_4gpu_h100.yaml  intnano_1gpu.yaml  intnano_1gpu_a100.yaml  intnano_2gpu.yaml  intnano_3gpu_a100.yaml  juwels.yaml  juwels_4gpu.yaml  main.yaml
auto_slurm/templates/: base.sh.j2  logo.txt  main.sh.j2  resume.sh.j2
configs/: haicore_full.yaml  horeka_single.yaml  int_nano.yaml
examples/resume/: main.py
slurm_submit/: slurm_submit.py
slurm_submit/configs/: haicore_full.yaml  horeka_single.yaml  int_nano.yaml  juwels.yaml
tests/: test_aslurmx.py  test_config.py  test_helpers.py  test_testing.py  utils.py
