[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_submit"
version = "0.1.0"
description = "Slurm submission helper that writes sbatch scripts based on templates and starts them automatically for you."
authors = [
    {name = "Henrik Schopmans", email = "h.schopmans@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pyyaml"]

[project.scripts]
slurm_submit = "slurm_submit.slurm_submit:main"